<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:civ_border_width="2dp"
            android:layout_marginTop="20dp"
            app:civ_border_color="#FF909090"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/Name"
                tools:text="@string/name_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/name_user"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                tools:text="@string/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/username"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                android:baselineAligned="false">

                <TextView
                    tools:text="Company : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginBottom="4dp"
                    android:maxLines="2"
                    android:text="@string/company2"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_company"
                    tools:text="@string/Company"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginBottom="4dp"
                    android:maxLines="10"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                android:baselineAligned="false">

                <TextView
                    tools:text="Location : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginBottom="4dp"
                    android:maxLines="2"
                    android:text="@string/location2"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_Location"
                    tools:text="@string/Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:layout_marginBottom="4dp"

                    android:maxLines="10"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                android:baselineAligned="false">

                <TextView
                    tools:text="ID : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginBottom="4dp"
                    android:maxLines="2"
                    android:text="@string/id"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_id"
                    tools:text="11112"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:layout_marginBottom="4dp"
                    android:maxLines="10"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="20dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        tools:text="Followers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/followers"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_followers"
                        tools:text="@string/Jumlah_followers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:maxLines="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/following"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_following"
                        tools:text="@string/Jumlah_followers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:maxLines="1"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    tools:text="Repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/repository"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_repository"
                    tools:text="@string/Jumlah_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:maxLines="1"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                tools:text="Follow ?"
                android:id="@+id/tv_follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/follow"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                app:fabSize="normal"
                app:layout_anchorGravity="bottom|end"
                app:srcCompat="@drawable/ic_baseline_favorite_border_24"
                android:contentDescription="@string/todo" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>


